helios-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_running_h3.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                        "
"                                        "
"                                        "
